--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="darkblue">#0c1134</color>
     <color name="waterblue">#0c5ea0</color>
     <color name="lightblue">#F2FCFF</color>
+    <color name="loadblue">#B3E2FC</color>
 </resources>
