--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="35sp"
-                android:text="10234"/>
+                android:text="@string/noData"/>
         </LinearLayout>
     </FrameLayout>
 
