--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,11 +92,12 @@
                 android:layout_marginTop="65dp"
                 android:layout_marginRight="10dp"
                 />
+            <!-- set them bigger in code bc they small -->
             <ImageView
                 android:id="@+id/hunger3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/fish"
+                android:src="@drawable/half"
                 android:layout_marginTop="65dp"
                 android:layout_marginRight="10dp"
                 />
@@ -104,7 +105,7 @@
                 android:id="@+id/hunger4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/fish"
+                android:src="@drawable/emptyfish"
                 android:layout_marginTop="65dp"
                 android:layout_marginRight="10dp"
                 />
@@ -159,25 +160,24 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
         android:clickable="true"
         android:focusable="true">
         <ImageView
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:src="@drawable/button1"
-            android:layout_marginStart="50dp"/>
+            android:src="@drawable/button1" />
         <!-- inner text -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center"
-            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="3dp"
                 android:text="@string/Feed"
                 android:textSize="35sp"
                 />
@@ -202,6 +202,27 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/fish"
+            android:layout_gravity="center"/>
+    </FrameLayout>
+
+    <!-- stat button -->
+    <FrameLayout
+        android:id="@+id/statbutton"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/button2"
+            android:scaleType="fitEnd"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ribbon"
             android:layout_gravity="center"/>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
