--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -42,7 +42,7 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/youtube"
+            android:src="@drawable/calendar"
             android:layout_marginEnd="5dp"
             android:layout_marginTop="5dp"/>
         <TextView
@@ -105,7 +105,7 @@
                         android:id="@+id/MondayStep"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20000"
+                        android:text="@string/NoStep"
                         android:textSize="20sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -119,7 +119,7 @@
                         android:id="@+id/MondayRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="0%"
                         android:textSize="20sp"/>
                     <ImageView
                         android:layout_width="27dp"
@@ -150,7 +150,7 @@
                         android:id="@+id/TuesdayStep"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20000"
+                        android:text="@string/NoStep"
                         android:textSize="20sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -164,7 +164,7 @@
                         android:id="@+id/TuesdayRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="0%"
                         android:textSize="20sp"/>
                     <ImageView
                         android:layout_width="27dp"
@@ -195,7 +195,7 @@
                         android:id="@+id/WednesdayStep"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20000"
+                        android:text="@string/NoStep"
                         android:textSize="20sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -209,7 +209,7 @@
                         android:id="@+id/WednesdayRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="0%"
                         android:textSize="20sp"/>
                     <ImageView
                         android:layout_width="27dp"
@@ -263,7 +263,7 @@
                         android:id="@+id/ThursdayStep"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20000"
+                        android:text="@string/NoStep"
                         android:textSize="20sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -277,7 +277,7 @@
                         android:id="@+id/ThursdayRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="0%"
                         android:textSize="20sp"/>
                     <ImageView
                         android:layout_width="27dp"
@@ -308,7 +308,7 @@
                         android:id="@+id/FridayStep"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20000"
+                        android:text="@string/NoStep"
                         android:textSize="20sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -322,7 +322,7 @@
                         android:id="@+id/FridayRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="0%"
                         android:textSize="20sp"/>
                     <ImageView
                         android:layout_width="27dp"
@@ -353,7 +353,7 @@
                         android:id="@+id/SaturdayStep"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20000"
+                        android:text="@string/NoStep"
                         android:textSize="20sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -367,7 +367,7 @@
                         android:id="@+id/SaturdayRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="0%"
                         android:textSize="20sp"/>
                     <ImageView
                         android:layout_width="27dp"
@@ -411,7 +411,7 @@
                         android:id="@+id/SundayStep"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20000"
+                        android:text="@string/NoStep"
                         android:textSize="20sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -425,7 +425,7 @@
                         android:id="@+id/SundayRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="20%"
+                        android:text="0%"
                         android:textSize="20sp"/>
                     <ImageView
                         android:layout_width="27dp"
@@ -474,7 +474,7 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/seal1"
+            android:src="@drawable/ribbon"
             android:layout_gravity="center"/>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
